# indicato-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  codecov.yml  makefile
.github/workflows/: main.yml  pr.yml  publish.yml
benches/: wilders_smoothing_bench.rs
indicato_rs/: Cargo.toml
indicato_rs/src/: fin_error.rs  lib.rs
indicato_rs/src/deque_math/: deque_ext.rs
indicato_rs/src/dequeue_math/: mod.rs
indicato_rs/src/signals/: bollinger_bands.rs  exponential_moving_average.rs  maximum_period.rs  minimum_period.rs  mod.rs  moving_average_convergence_divergence.rs  relative_strength_index.rs  simple_moving_average.rs  stochastic_momentum_oscillator.rs  wilders_smoothing.rs
indicato_rs_proc/: Cargo.toml
indicato_rs_proc/src/: lib.rs
local_macros/: Cargo.toml
src/: error.rs  lib.rs  traits.rs
src/signals/: exponential_moving_average.rs  maximum_period.rs  minimum_period.rs  mod.rs  moving_average_convergence_divergence.rs  relative_strength_index.rs  simple_moving_average.rs  stochastic_momentum_oscillator.rs  wilders_smoothing.rs
