[package]
name = "indicato_rs"
version = "0.1.3"
authors = ["Aiden Ziegelaar"]
description = "Library for common statistical market signals"
documentation = "https://docs.rs/indicato_rs"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aiden-Ziegelaar/indicato-rs"
readme = "../README.md"

[dependencies]
# Workspace Dependencies
indicato_rs_proc = { workspace = true, version = "0.1.0" }

# External Dependencies

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
approx = { version = "0.5.1" }

[[bench]]
name = "wilders_smoothing_bench"
harness = false

[lib]