[package]
name = "indicato_rs_proc"
version = "0.1.0"
edition = "2021"
description = "Proc macro for generating indicato_rs struct derived functions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true